--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -30,7 +30,7 @@ android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:orientation="horizontal"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,18 +48,16 @@ android:layout_height="match_parent">
             android:id="@+id/btnGoToPlay"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:text="Go to Play" />
-    </LinearLayout>
+            android:text="Go To\nPlay" />
 
-    <!--<Button-->
-<!--    android:id="@+id/btnStartStop"-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:text="Start Stream"-->
-<!--    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--    app:layout_constraintEnd_toEndOf="parent"-->
-<!--    app:layout_constraintStart_toStartOf="parent"-->
-<!--    android:layout_marginBottom="32dp" />-->
+        <Button
+            android:id="@+id/btnSettings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Settings\n" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
